// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button states should render disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-primary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: not-allowed;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-8x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-primary-hovered);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-primary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    aria-disabled="true"
    class="emotion-0 emotion-1"
    data-tonic="Button"
    disabled=""
    type="button"
  >
    Disabled Button
  </button>
</DocumentFragment>
`;

exports[`Button states should render selected state 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-primary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-8x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-primary-hovered);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-primary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-selected=""
    data-tonic="Button"
    tabindex="-1"
    type="button"
  >
    Selected Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render default variant with lg size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-secondary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-10x);
  font-size: var(--tonic-fontSizes-md);
  line-height: var(--tonic-lineHeights-md);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-secondary-hovered);
  color: var(--tonic-colors-text-accent);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-secondary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-secondary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render default variant with md size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-secondary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-8x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-secondary-hovered);
  color: var(--tonic-colors-text-accent);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-secondary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-secondary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render default variant with sm size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-secondary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-6x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-secondary-hovered);
  color: var(--tonic-colors-text-accent);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-secondary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-secondary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render emphasis variant with lg size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-red-600);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-10x);
  font-size: var(--tonic-fontSizes-md);
  line-height: var(--tonic-lineHeights-md);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-red-500);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-red-700);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render emphasis variant with md size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-red-600);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-8x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-red-500);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-red-700);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render emphasis variant with sm size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-red-600);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-6x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-red-500);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-red-700);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render ghost variant with lg size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-subtle-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-secondary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-10x);
  font-size: var(--tonic-fontSizes-md);
  line-height: var(--tonic-lineHeights-md);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  z-index: 2;
}

.emotion-0:hover:not(:focus-visible),
.emotion-0[data-hover]:not(:focus-visible) {
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:active,
.emotion-0[data-active] {
  border-color: var(--tonic-colors-transparent);
  background-color: var(--tonic-colors-_foreground-subtle-active);
  color: var(--tonic-colors-text-accent);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  border-color: var(--tonic-colors-transparent);
  background-color: var(--tonic-colors-_foreground-subtle-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render ghost variant with md size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-subtle-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-secondary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-8x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  z-index: 2;
}

.emotion-0:hover:not(:focus-visible),
.emotion-0[data-hover]:not(:focus-visible) {
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:active,
.emotion-0[data-active] {
  border-color: var(--tonic-colors-transparent);
  background-color: var(--tonic-colors-_foreground-subtle-active);
  color: var(--tonic-colors-text-accent);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  border-color: var(--tonic-colors-transparent);
  background-color: var(--tonic-colors-_foreground-subtle-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render ghost variant with sm size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-subtle-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-secondary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-6x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  z-index: 2;
}

.emotion-0:hover:not(:focus-visible),
.emotion-0[data-hover]:not(:focus-visible) {
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:active,
.emotion-0[data-active] {
  border-color: var(--tonic-colors-transparent);
  background-color: var(--tonic-colors-_foreground-subtle-active);
  color: var(--tonic-colors-text-accent);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  border-color: var(--tonic-colors-transparent);
  background-color: var(--tonic-colors-_foreground-subtle-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render primary variant with lg size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-primary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-10x);
  font-size: var(--tonic-fontSizes-md);
  line-height: var(--tonic-lineHeights-md);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-primary-hovered);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-primary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render primary variant with md size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-primary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-8x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-primary-hovered);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-primary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render primary variant with sm size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-primary-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-_fixed-dark-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-6x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-transparent);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background-color: var(--tonic-colors-_foreground-primary-hovered);
  z-index: 2;
}

.emotion-0:active,
.emotion-0[data-active] {
  background-color: var(--tonic-colors-_foreground-primary-active);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  background-color: var(--tonic-colors-_foreground-primary-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render secondary variant with lg size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-subtle-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-10x);
  font-size: var(--tonic-fontSizes-md);
  line-height: var(--tonic-lineHeights-md);
  border-color: var(--tonic-colors-border-_primary-enabled);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000,inset 0 0 0 .1875rem #6f6f6f;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  z-index: 2;
}

.emotion-0:hover:not(:focus-visible),
.emotion-0[data-hover]:not(:focus-visible) {
  border-color: var(--tonic-colors-border-_primary-hovered);
}

.emotion-0:active,
.emotion-0[data-active] {
  border-color: var(--tonic-colors-border-_primary-active);
  background-color: var(--tonic-colors-_foreground-subtle-active);
  color: var(--tonic-colors-text-accent);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  border-color: var(--tonic-colors-border-_primary-disabled);
  background-color: var(--tonic-colors-_foreground-subtle-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render secondary variant with md size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-subtle-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-8x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-border-_primary-enabled);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000,inset 0 0 0 .1875rem #6f6f6f;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  z-index: 2;
}

.emotion-0:hover:not(:focus-visible),
.emotion-0[data-hover]:not(:focus-visible) {
  border-color: var(--tonic-colors-border-_primary-hovered);
}

.emotion-0:active,
.emotion-0[data-active] {
  border-color: var(--tonic-colors-border-_primary-active);
  background-color: var(--tonic-colors-_foreground-subtle-active);
  color: var(--tonic-colors-text-accent);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  border-color: var(--tonic-colors-border-_primary-disabled);
  background-color: var(--tonic-colors-_foreground-subtle-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button variants should render secondary variant with sm size 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-_foreground-subtle-enabled);
  border: var(--tonic-borders-1);
  color: var(--tonic-colors-text-accent);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: var(--tonic-radii-sm);
  padding-left: var(--tonic-space-3x);
  padding-right: var(--tonic-space-3x);
  -webkit-transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1),border-color 200ms cubic-bezier(0.4, 0, 0.2, 1),box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1),color 200ms cubic-bezier(0.4, 0, 0.2, 1);
  min-height: var(--tonic-sizes-6x);
  font-size: var(--tonic-fontSizes-sm);
  line-height: var(--tonic-lineHeights-sm);
  border-color: var(--tonic-colors-border-_primary-enabled);
}

.emotion-0:focus-visible {
  border-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  box-shadow: inset 0 0 0 .0625rem #ffffff,inset 0 0 0 .125rem #000000,inset 0 0 0 .1875rem #6f6f6f;
  z-index: 1;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  color: var(--tonic-colors-text-accent);
  background-color: var(--tonic-colors-_foreground-subtle-hovered);
  z-index: 2;
}

.emotion-0:hover:not(:focus-visible),
.emotion-0[data-hover]:not(:focus-visible) {
  border-color: var(--tonic-colors-border-_primary-hovered);
}

.emotion-0:active,
.emotion-0[data-active] {
  border-color: var(--tonic-colors-border-_primary-active);
  background-color: var(--tonic-colors-_foreground-subtle-active);
  color: var(--tonic-colors-text-accent);
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled] {
  border-color: var(--tonic-colors-border-_primary-disabled);
  background-color: var(--tonic-colors-_foreground-subtle-disabled);
  color: var(--tonic-colors-text-disabled);
  cursor: not-allowed;
}

<button
    class="emotion-0 emotion-1"
    data-tonic="Button"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;
